# YAM

./: .gitignore  README.md  molmoact_to_lerobot_v30.py  pyproject.toml  read_gripper_pos.py  test_gripper.py  test_gripper_direction.py
gello_software/: .gitignore
gello_software/configs/: yam_left.yaml  yam_left_sim.yaml  yam_right.yaml  yam_right_sim.yaml
gello_software/experiments/: launch_yaml.py  launch_yaml_eval.py  launch_yaml_open_loop.py  launch_yaml_replay.py
gello_software/gello/: env.py
gello_software/gello/cameras/: realsense_camera.py
gello_software/gello/data_utils/: data_saver_thread.py  keyboard_interface.py
gello_software/gello/dynamixel/: driver.py
gello_software/gello/utils/: control_utils.py  launch_utils.py
gello_software/scripts/: 70-can-right.link  add_next_joint_entries.py  image_to_video.sh  setup_can_udev.sh
i2rt/: .gitignore  README.md  pyproject.toml
i2rt/devices/: FlowBase.desktop  config_passive_encoder.py  install_devices.sh  pi_setup.md  setup_flow_desktop.sh  setup_led.sh
i2rt/devices/rules/: flow_base.rules
i2rt/doc/: set_persist_id_socket_can.md  yam_handle_readme.md
i2rt/examples/bimanual_lead_follower/: README.md  bimanual_lead_follower.py
i2rt/examples/record_replay_2arms/: record_replay_trajectory.py
i2rt/examples/record_replay_trajectory/: README.md  example_trajectory.npy  record_replay_trajectory.py
i2rt/examples/single_motor_position_pd_control/: README.md  single_motor_position_pd_control.py
i2rt/i2rt/flow_base/: README.md
i2rt/i2rt/motor_drivers/: can_interface.py  dm_driver.py
i2rt/i2rt/robot_models/yam/: yam_4310_linear.xml  yam_lw_gripper.xml  yam_no_gripper.xml
i2rt/i2rt/robots/: get_robot.py  motor_chain_robot.py  utils.py
i2rt/i2rt/robots/tests/: test_kinematics.py
i2rt/i2rt/utils/: gamepad_utils.py  utils.py
i2rt/scripts/: minimum_gello.py  read_encoder.py
lerobot/: .gitignore  Dockerfile
lerobot/lerobot/common/datasets/: transforms.py
lerobot/lerobot/common/policies/diffusion/: configuration_diffusion.py
lerobot/lerobot/configs/: train.py
lerobot/src/lerobot/configs/: train.py
lerobot/src/lerobot/datasets/: dataset_tools.py
lerobot/src/lerobot/policies/: pretrained.py
lerobot/src/lerobot/policies/diffusion/: configuration_diffusion.py  dit.py  ditx.py  mdt.py  modeling_diffusion.py  positional_embedding.py  rgb_encoder.py  rgb_encoder_vit.py  text_encoder.py  unet.py
lerobot/src/lerobot/rl/: wandb_utils.py
lerobot/src/lerobot/scripts/: lerobot_train.py
lerobot/src/lerobot/utils/: constants.py
oculus_reader/: __init__.py  pyproject.toml  setup.py
oculus_reader/oculus_reader/: reader.py
oculus_reader/oculus_reader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/i2rt/flow_base/: flow_base_client.py  flow_base_controller.py
src/i2rt/motor_config_tool/: utils.py
src/i2rt/motor_drivers/: dm_driver.py  utils.py
src/i2rt/robots/: get_robot.py  utils.py
src/i2rt/utils/: encoder_utils.py  mujoco_utils.py
src/lerobot/datasets/: lerobot_dataset.py
teleop_and_inference/configs/: yam_left.yaml
teleop_and_inference/experiments/: launch_yaml_collect_data.py  launch_yaml_eval.py  test_inference_accuracy.py
teleop_and_inference/gello/data_utils/: data_replay.py
teleop_and_inference/scripts/: 70-can-left.link  70-can-right.link  70-persistent-can.rules  70-persistent-ftdi.rules
telop_and_inference/configs/: yam_right_sim.yaml
telop_and_inference/gello/data_utils/: data_saver.py
telop_and_inference/scripts/: 70-persistent-can.rules  add_next_joint_entries.py  setup_ftdi_udev.sh
yam_realtime/: pyproject.toml
yam_realtime/configs/: yam_eval.yaml  yam_record_replay.yaml
yam_realtime/robot_configs/yam/: left.yaml  right.yaml
yam_realtime/robot_configs/yam/parallel-jaw_gripper/: left.yaml
yam_realtime/yam_realtime/agents/teleoperation/: oculus_record.py  oculus_viser_agent.py
yam_realtime/yam_realtime/envs/: robot_env.py
yam_realtime/yam_realtime/envs/configs/: loader.py
yam_realtime/yam_realtime/robots/: utils.py
yam_realtime/yam_realtime/robots/inverse_kinematics/: yam_pyroki.py
yam_realtime/yam_realtime/robots/viser/: viser_base.py
yam_realtime/yam_realtime/scripts/: 70-persistent-can.rules  collect_data.py  collect_data_with_camera.py  eval_diffusion.py  eval_diffusion_joints.py  open_loop_eval.py  open_loop_eval_joints.py  replay.py  test_can_interface.py  test_motor_init.py  test_single_motor.py
yam_realtime/yam_realtime/utils/: camera_thread.py  data_replay.py  data_saver.py  launch_utils.py  lerobot_data_saver.py  molmoact_to_lerobot.py  safety_checker.py  test_safety.py
yam_realtime/yam_realtime/yam_video/put_banana_box/20251123_155235/: actions.json  metadata.json
yam_realtime/yam_realtime/yam_video/put_banana_box/20251123_155311/: actions.json  metadata.json
yam_realtime/yam_realtime/yam_video/put_banana_box/20251123_155342/: actions.json  metadata.json
(+202 files in other folders)
