[build-system]
requires = ["setuptools >= 65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculus_reader"
version = "0.1.0"
description = "Oculus Quest controller reader for robot teleoperation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pure-python-adb",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["oculus_reader", "oculus_reader.*"]
namespaces = false
